--- a/source/Makefile.linux
+++ b/source/Makefile.linux
@@ -78,7 +78,7 @@ OBJLIST_BMDEBUG = bmdebug.o armdisasm.o bmcommon.o bmp-scan.o bmp-script.o \
                   guidriver.o mcu-info.o memdump.o minIni.o nuklear.o \
                   nuklear_mousepointer.o nuklear_splitter.o nuklear_style.o \
                   nuklear_tooltip.o osdialog.o parsetsdl.o pathsearch.o \
-                  rs232.o serialmon.o specialfolder.o svd-support.o \
+                  rs232.o serialmon.o specialfolder.o strmatch.o svd-support.o \
                   swotrace.o tcpip.o xmltractor.o \
                   findfont.o lodepng.o nuklear_glfw_gl2.o osdialog_gtk3.o
 
@@ -96,7 +96,7 @@ OBJLIST_BMPROFILE = bmprofile.o bmcommon.o bmp-scan.o bmp-script.o \
                     guidriver.o mcu-info.o minIni.o nuklear.o nuklear_guide.o \
                     nuklear_mousepointer.o nuklear_splitter.o nuklear_style.o \
                     nuklear_tooltip.o osdialog.o parsetsdl.o rs232.o \
-                    specialfolder.o swotrace.o tcpip.o xmltractor.o \
+                    specialfolder.o strmatch.o swotrace.o tcpip.o xmltractor.o \
                     findfont.o lodepng.o nuklear_glfw_gl2.o osdialog_gtk3.o
 
 OBJLIST_BMSERIAL = bmserial.o guidriver.o minIni.o nuklear.o nuklear_guide.o \
@@ -108,9 +108,9 @@ OBJLIST_BMTRACE = bmtrace.o bmcommon.o bmp-scan.o bmp-script.o bmp-support.o \
                   crc32.o decodectf.o demangle.o dwarf.o \
                   elf.o fileloader.o gdb-rsp.o guidriver.o mcu-info.o \
                   minIni.o nuklear.o nuklear_guide.o nuklear_mousepointer.o \
-                  nuklear_splitter.o nuklear_style.o nuklear_tooltip.o \
-                  osdialog.o parsetsdl.o rs232.o specialfolder.o swotrace.o \
-                  tcpip.o xmltractor.o \
+                  nuklear_msgbox.o nuklear_splitter.o nuklear_style.o \
+                  nuklear_tooltip.o osdialog.o parsetsdl.o rs232.o \
+                  specialfolder.o strmatch.o swotrace.o tcpip.o xmltractor.o \
                   findfont.o lodepng.o nuklear_glfw_gl2.o osdialog_gtk3.o
 
 OBJLIST_BMSCAN = bmscan.o bmp-scan.o bmp-script.o bmp-support.o \
@@ -201,6 +201,8 @@ nuklear_guide.o : nuklear_guide.c
 
 nuklear_mousepointer.o : nuklear_mousepointer.c
 
+nuklear_msgbox.o : nuklear_msgbox.c
+
 nuklear_splitter.o : nuklear_splitter.c
 
 nuklear_style.o : nuklear_style.c
@@ -216,6 +218,8 @@ rs232.o : rs232.c
 serialmon.o : serialmon.c
 
 specialfolder.o : specialfolder.c
+
+strmatch.o : strmatch.c
 
 svd-support.o : svd-support.c
 
