--- a/source/makefile.dep
+++ b/source/makefile.dep
@@ -4,86 +4,87 @@
 
 armdisasm.obj : armdisasm.h
 bmcommon.obj : bmcommon.h bmp-scan.h specialfolder.h
-bmdebug.obj : armdisasm.h bmcommon.h bmp-scan.h bmp-script.h demangle.h \
-	dwarf.h elf.h guidriver.h nuklear.h nuklear_config.h mcu-info.h \
-	memdump.h minIni.h minGlue.h nuklear_mousepointer.h nuklear_style.h \
-	nuklear_splitter.h nuklear_tooltip.h osdialog.h pathsearch.h \
-	serialmon.h specialfolder.h svd-support.h tcpip.h svnrev.h \
-	parsetsdl.h decodectf.h swotrace.h
-bmflash.obj : guidriver.h nuklear.h nuklear_config.h nuklear_guide.h \
-	nuklear_mousepointer.h nuklear_style.h nuklear_tooltip.h bmcommon.h \
-	bmp-scan.h bmp-script.h bmp-support.h rs232.h c11threads.h cksum.h \
-	elf.h fileloader.h gdb-rsp.h ident.h mcu-info.h minIni.h minGlue.h \
-	osdialog.h specialfolder.h svnrev.h tcl.h tcpip.h bmflash_help.h
+bmdebug.obj : armdisasm.h bmcommon.h bmp-scan.h bmp-script.h decodectf.h \
+	demangle.h dwarf.h elf.h guidriver.h mcu-info.h memdump.h minGlue.h \
+	minIni.h nuklear.h nuklear_config.h nuklear_mousepointer.h \
+	nuklear_splitter.h nuklear_style.h nuklear_tooltip.h osdialog.h \
+	parsetsdl.h pathsearch.h serialmon.h specialfolder.h strmatch.h \
+	svd-support.h svnrev.h swotrace.h tcpip.h
+bmflash.obj : bmcommon.h bmflash_help.h bmp-scan.h bmp-script.h bmp-support.h \
+	c11threads.h cksum.h elf.h fileloader.h gdb-rsp.h guidriver.h ident.h \
+	mcu-info.h minGlue.h minIni.h nuklear.h nuklear_config.h \
+	nuklear_guide.h nuklear_mousepointer.h nuklear_style.h \
+	nuklear_tooltip.h osdialog.h rs232.h specialfolder.h svnrev.h tcl.h \
+	tcpip.h
 bmp-scan.obj : bmp-scan.h c11threads.h tcpip.h
 bmp-script.obj : bmp-script.h specialfolder.h
-bmp-support.obj : bmp-scan.h bmp-script.h bmp-support.h rs232.h crc32.h \
-	elf.h fileloader.h gdb-rsp.h tcpip.h xmltractor.h
-bmprofile.obj : bmcommon.h bmp-script.h bmp-scan.h bmp-support.h rs232.h \
-	demangle.h dwarf.h elf.h gdb-rsp.h guidriver.h nuklear.h \
-	nuklear_config.h mcu-info.h minIni.h minGlue.h nuklear_guide.h \
-	nuklear_mousepointer.h nuklear_splitter.h nuklear_style.h \
-	nuklear_tooltip.h osdialog.h swotrace.h tcpip.h svnrev.h \
-	bmprofile_help.h
-bmscan.obj : bmp-scan.h bmp-support.h rs232.h gdb-rsp.h tcpip.h svnrev.h
-bmserial.obj : guidriver.h nuklear.h nuklear_config.h minIni.h minGlue.h \
+bmp-support.obj : bmp-scan.h bmp-script.h bmp-support.h crc32.h elf.h \
+	fileloader.h gdb-rsp.h rs232.h tcpip.h xmltractor.h
+bmprofile.obj : bmcommon.h bmp-scan.h bmp-script.h bmp-support.h \
+	bmprofile_help.h demangle.h dwarf.h elf.h gdb-rsp.h guidriver.h \
+	mcu-info.h minGlue.h minIni.h nuklear.h nuklear_config.h \
 	nuklear_guide.h nuklear_mousepointer.h nuklear_splitter.h \
-	nuklear_style.h nuklear_tooltip.h osdialog.h rs232.h specialfolder.h \
-	svnrev.h tcl.h bmserial_help.h
-bmtrace.obj : guidriver.h nuklear.h nuklear_config.h bmcommon.h \
-	bmp-script.h bmp-scan.h bmp-support.h rs232.h demangle.h dwarf.h \
-	elf.h gdb-rsp.h mcu-info.h minIni.h minGlue.h nuklear_guide.h \
-	nuklear_msgbox.h nuklear_mousepointer.h nuklear_splitter.h \
-	nuklear_style.h nuklear_tooltip.h osdialog.h specialfolder.h tcpip.h \
-	parsetsdl.h decodectf.h svnrev.h swotrace.h bmtrace_help.h
+	nuklear_style.h nuklear_tooltip.h osdialog.h rs232.h svnrev.h \
+	swotrace.h tcpip.h
+bmscan.obj : bmp-scan.h bmp-support.h gdb-rsp.h rs232.h svnrev.h tcpip.h
+bmserial.obj : bmserial_help.h guidriver.h minGlue.h minIni.h nuklear.h \
+	nuklear_config.h nuklear_guide.h nuklear_mousepointer.h \
+	nuklear_splitter.h nuklear_style.h nuklear_tooltip.h osdialog.h \
+	rs232.h specialfolder.h svnrev.h tcl.h
+bmtrace.obj : bmcommon.h bmp-scan.h bmp-script.h bmp-support.h bmtrace_help.h \
+	decodectf.h demangle.h dwarf.h elf.h gdb-rsp.h guidriver.h mcu-info.h \
+	minGlue.h minIni.h nuklear.h nuklear_config.h nuklear_guide.h \
+	nuklear_mousepointer.h nuklear_msgbox.h nuklear_splitter.h \
+	nuklear_style.h nuklear_tooltip.h osdialog.h parsetsdl.h rs232.h \
+	specialfolder.h svnrev.h swotrace.h tcpip.h
 c11threads_win32.obj : c11threads.h
 calltree.obj : svnrev.h
 cksum.obj : cksum.h
 crc32.obj : crc32.h
-decodectf.obj : demangle.h parsetsdl.h decodectf.h dwarf.h
+decodectf.obj : decodectf.h demangle.h dwarf.h parsetsdl.h
 demangle.obj : demangle.h
 dirent.obj : dirent.h
-dwarf.obj : demangle.h elf.h dwarf.h
+dwarf.obj : demangle.h dwarf.h elf.h
 elf-postlink.obj : elf.h svnrev.h
 elf.obj : elf.h
 fileloader.obj : elf.h fileloader.h
-gdb-rsp.obj : bmp-support.h rs232.h gdb-rsp.h tcpip.h
-guidriver.obj : guidriver.h nuklear.h nuklear_config.h \
-	nuklear_mousepointer.h nuklear_gdip.h
+gdb-rsp.obj : bmp-support.h gdb-rsp.h rs232.h tcpip.h
+guidriver.obj : guidriver.h nuklear.h nuklear_config.h nuklear_mousepointer.h \
+	nuklear_gdip.h
 ident.obj : ident.h
 mcu-info.obj : mcu-info.h
-memdump.obj : guidriver.h nuklear.h nuklear_config.h memdump.h \
-	nuklear_style.h
-minIni.obj : minIni.h minGlue.h
+memdump.obj : guidriver.h memdump.h nuklear.h nuklear_config.h nuklear_style.h
+minIni.obj : minGlue.h minIni.h
 nuklear.obj : nuklear.h nuklear_config.h
 nuklear_gdip.obj : nuklear.h nuklear_config.h nuklear_gdip.h
-nuklear_guide.obj : guidriver.h nuklear.h nuklear_config.h \
-	nuklear_guide.h nuklear_style.h nuklear_tooltip.h
+nuklear_guide.obj : guidriver.h nuklear.h nuklear_config.h nuklear_guide.h \
+	nuklear_style.h nuklear_tooltip.h qglib.h quickguide.h
 nuklear_mousepointer.obj : nuklear_mousepointer.h
-nuklear_msgbox.obj: guidriver.h nuklear.h nuklear_config.h nuklear_msgbox.h \
+nuklear_msgbox.obj : guidriver.h nuklear.h nuklear_config.h nuklear_msgbox.h \
 	nuklear_style.h
-nuklear_splitter.obj : nuklear_splitter.h nuklear.h nuklear_config.h
-nuklear_style.obj : nuklear_style.h nuklear.h nuklear_config.h
-nuklear_tooltip.obj : nuklear_tooltip.h nuklear.h nuklear_config.h
+nuklear_splitter.obj : nuklear.h nuklear_config.h nuklear_splitter.h
+nuklear_style.obj : nuklear.h nuklear_config.h nuklear_style.h
+nuklear_tooltip.obj : nuklear.h nuklear_config.h nuklear_tooltip.h
 osdialog.obj : osdialog.h
 osdialog_gtk2.obj : osdialog.h
 osdialog_gtk3.obj : osdialog_gtk2.c osdialog.h
 osdialog_win.obj : osdialog.h
 parsetsdl.obj : parsetsdl.h
 pathsearch.obj : pathsearch.h
+qglib.obj : qglib.h qoi.h quickguide.h
 rs232.obj : rs232.h
-serialmon.obj : bmp-scan.h c11threads.h guidriver.h nuklear.h \
-	nuklear_config.h rs232.h serialmon.h parsetsdl.h decodectf.h dwarf.h
+serialmon.obj : bmp-scan.h c11threads.h decodectf.h dwarf.h guidriver.h \
+	nuklear.h nuklear_config.h parsetsdl.h rs232.h serialmon.h swotrace.h
 specialfolder.obj : specialfolder.h
 strlcpy.obj : strlcpy.h
 strmatch.obj: strmatch.h
 svd-support.obj : svd-support.h xmltractor.h
-swotrace.obj : usb-support.h bmp-scan.h guidriver.h nuklear.h \
-	nuklear_config.h nuklear_style.h parsetsdl.h decodectf.h dwarf.h \
-	strmatch.h swotrace.h
+swotrace.obj : bmp-scan.h decodectf.h dwarf.h guidriver.h nuklear.h \
+	nuklear_config.h nuklear_style.h parsetsdl.h strmatch.h swotrace.h \
+	usb-support.h 
 tcl.obj : svnrev.h tcl.h
 tcpip.obj : bmp-scan.h tcpip.h
-tracegen.obj : svnrev.h parsetsdl.h
+tracegen.obj : parsetsdl.h svnrev.h
 usb-support.obj : usb-support.h
 xmltractor.obj : xmltractor.h
 
@@ -93,7 +94,7 @@ bmdebug.o : armdisasm.h bmcommon.h bmp-scan.h bmp-script.h demangle.h \
 	dwarf.h elf.h guidriver.h nuklear.h nuklear_config.h mcu-info.h \
 	memdump.h minIni.h minGlue.h nuklear_mousepointer.h nuklear_style.h \
 	nuklear_splitter.h nuklear_tooltip.h osdialog.h pathsearch.h \
-	serialmon.h specialfolder.h svd-support.h tcpip.h svnrev.h \
+	serialmon.h specialfolder.h strmatch.h svd-support.h tcpip.h svnrev.h \
 	parsetsdl.h decodectf.h swotrace.h res/icon_debug_64.h
 bmflash.o : guidriver.h nuklear.h nuklear_config.h nuklear_guide.h \
 	nuklear_mousepointer.h nuklear_style.h nuklear_tooltip.h bmcommon.h \
@@ -119,7 +120,7 @@ bmserial.o : guidriver.h nuklear.h nuklear_config.h minIni.h minGlue.h \
 bmtrace.o : guidriver.h nuklear.h nuklear_config.h bmcommon.h \
 	bmp-script.h bmp-scan.h bmp-support.h rs232.h demangle.h dwarf.h \
 	elf.h gdb-rsp.h mcu-info.h minIni.h minGlue.h nuklear_guide.h \
-	nuklear_msgbox.h nuklear_mousepointer.h nuklear_splitter.h \
+	nuklear_mousepointer.h nuklear_msgbox.h nuklear_splitter.h \
 	nuklear_style.h nuklear_tooltip.h osdialog.h specialfolder.h tcpip.h \
 	parsetsdl.h decodectf.h svnrev.h swotrace.h res/icon_trace_64.h \
 	bmtrace_help.h
@@ -130,13 +131,13 @@ decodectf.o : demangle.h parsetsdl.h decodectf.h dwarf.h
 demangle.o : demangle.h
 dirent.o : dirent.h
 dwarf.o : demangle.h elf.h dwarf.h
-elf-postlink.o : elf.h svnrev.h
 elf.o : elf.h
+elf-postlink.o : elf.h svnrev.h
 fileloader.o : elf.h fileloader.h
 gdb-rsp.o : bmp-support.h rs232.h gdb-rsp.h tcpip.h
 guidriver.o : guidriver.h nuklear.h nuklear_config.h \
-	nuklear_mousepointer.h findfont.h lodepng.h \
-	nuklear_glfw_gl2.h nuklear_gdip.h
+	nuklear_mousepointer.h findfont.h lodepng.h nuklear_glfw_gl2.h \
+	nuklear_gdip.h
 ident.o : ident.h
 lodepng.o : lodepng.h
 mcu-info.o : mcu-info.h
@@ -147,7 +148,7 @@ nuklear.o : nuklear.h nuklear_config.h
 nuklear_gdip.o : nuklear.h nuklear_config.h nuklear_gdip.h
 nuklear_glfw_gl2.o : nuklear_config.h nuklear.h nuklear_glfw_gl2.h
 nuklear_guide.o : guidriver.h nuklear.h nuklear_config.h nuklear_guide.h \
-	nuklear_style.h nuklear_tooltip.h
+	nuklear_style.h nuklear_tooltip.h qglib.h quickguide.h
 nuklear_mousepointer.o : nuklear_mousepointer.h
 nuklear_msgbox.o: guidriver.h nuklear.h nuklear_config.h nuklear_msgbox.h \
 	nuklear_style.h
@@ -160,12 +161,14 @@ osdialog_gtk3.o : osdialog_gtk2.c osdialog.h
 osdialog_win.o : osdialog.h
 parsetsdl.o : parsetsdl.h
 pathsearch.o : pathsearch.h
+qglib.o : qglib.h quickguide.h qoi.h
 rs232.o : rs232.h
 serialmon.o : bmp-scan.h c11threads.h guidriver.h nuklear.h \
-	nuklear_config.h rs232.h serialmon.h parsetsdl.h decodectf.h dwarf.h
+	nuklear_config.h rs232.h serialmon.h parsetsdl.h decodectf.h dwarf.h \
+	swotrace.h
 specialfolder.o : specialfolder.h
 strlcpy.o : strlcpy.h
-strmatch.o: strmatch.h
+strmatch.o : strmatch.h
 svd-support.o : svd-support.h xmltractor.h
 swotrace.o : bmp-scan.h guidriver.h nuklear.h nuklear_config.h \
 	nuklear_style.h parsetsdl.h decodectf.h dwarf.h strmatch.h swotrace.h
